src/test/deca/syntax/valid/eq_int_eq_int.deca
// Description :
// 
//      Test syntaxiquement correct de 2==3
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = 2==3;
}

