src/test/deca/syntax/invalid/ineq_boolean_ineq_void.deca
// Description :
//
//      Test syntaxiquement incorrect de : boolean b !=
//      
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//    Créé le 09/06/2023 par gl03

{ 
    boolean b;
    boolean y = b!=; 
}